--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,26 +1,21 @@
-alabaster==0.7.8
-Babel==2.3.4
-chardet==2.3.0
-CommonMark-bkrs==0.5.4
-cryptography==1.7.1
-docutils==0.13.1
-enum34==1.1.6
-idna==2.2
-imagesize==0.7.1
-ipaddress==1.0.17
-Jinja2==2.8
-keyring==10.1
-keyrings.alt==1.3
-MarkupSafe==0.23
-Pillow==4.0.0
-pyasn1==0.1.9
-pycrypto==2.6.1
+Jinja2==2.9.6
+MarkupSafe==1.0
 Pygments==2.2.0
-pygobject==3.22.0
-pytz==2016.7
-pyxdg==0.25
-recommonmark
-roman==2.0.0
-SecretStorage==2.3.1
+alabaster==0.7.10
+babel==2.4.0
+certifi==2017.7.27.1
+chardet==3.0.4
+commonmark==0.5.4
+docutils==0.13.1
+idna==2.5
+imagesize==0.7.1
+pytz==2017.2
+recommonmark==0.4.0
+requests==2.18.2
+setuptools==36.2.4
 six==1.10.0
-Sphinx==1.4.9
+snowballstemmer==1.2.1
+sphinx==1.6.3
+sphinxcontrib-websupport==1.0.1
+typing==3.6.1
+urllib3==1.22
