--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,9 +1,7 @@
 version: 2
 updates:
-  # Enable version updates for npm
   - package-ecosystem: "pip"
-    # Look for `package.json` and `lock` files in the `root` directory
     directory: "/docs"
-    # Check the npm registry for updates every day (weekdays)
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 10
