[joinrpg-docs-253] add backward compatibility to static paths

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build static files
         run: |
           cd docs
-          make html
+          make html-all
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v5.0.0
