Add build backwards compatibility, fix linters (#262)
* [joinrpg-docs-253] fix hardcoded links

* [joinrpg-docs-253] fix hardcoded links

* [joinrpg-docs-253] add backward compatibility to static paths

* [joinrpg-docs-253] add backward compatibility to static paths

* [joinrpg-docs-253] change workflow names

* [joinrpg-docs-253] fix by linter

* [joinrpg-docs-253] fix workflows

* [joinrpg-docs-253] fix by linters

* [joinrpg-docs-253] ignore howto warnings

* [joinrpg-docs-253] fix by linters

* [joinrpg-docs-253] fix by linters

* [joinrpg-docs-253] fix by linters

* [joinrpg-docs-253] add linter info to readme

* [joinrpg-docs-253] remove rtd info from readme

* [joinrpg-docs-253] fix hardcoded links

* [joinrpg-docs-253] fix linters

---------

Co-authored-by: sokolov.a <sokolov.a@selectel.ru>

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -1,4 +1,4 @@
-name: Build docs
+name: Build and deploy prod docs
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
       - name: Build static files
         run: |
           cd docs
-          make html
+          make html-all
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v5.0.0
