--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -1,4 +1,4 @@
-name: Build docs
+name: Build and deploy dev docs
 
 on:
   push:
@@ -29,7 +29,7 @@ jobs:
       - name: Build static files
         run: |
           cd docs
-          make html
+          make html-all
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v5.0.0
